--- a/template/include/annotation-blockquote-inside.tmpl
+++ b/template/include/annotation-blockquote-inside.tmpl
@@ -1,21 +1,20 @@
-<div class="annotation<{annotationClassSuffix}> <{dataSourceClass}>">
-	<[IF fullTitleHTML]>
-	<p class="data-field title <[IF2 authorDateAux]>author-date-aux<[IF2END]>">
+<div class="annotation<{annotationClassSuffix}>">
+	<p class="data-field title <[IF authorDateAux]>author-date-aux<[IFEND]>">
 		<a 
 		   class="<{titleLinkClass}>"
 		   title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>"
 		   href="<{titleLinkHref}>"
-		   <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
-		   <[IF2 titleLinkDataAttributes]><{titleLinkDataAttributes}><[IF2END]>
-		   <{titleLinkIconMetadata}>
-			   ><{fullTitleHTML}></a>\
-		<[IF2 secondaryTitleLinksHTML]><span class="secondary-title-links"><{secondaryTitleLinksHTML}></span><[IF2END]>\
-		<[IF2 [ abstract | fileIncludes ] & !authorDateAux & ! [ annotationClassSuffix "-partial" ] ]>:<[IF2END]>\
-		<[IF2 authorDateAux]><[IF3 author]>,\ <[IF3END]><{authorDateAux}><[IF3 [ abstract | fileIncludes ] & ! [ annotationClassSuffix "-partial" ] ]>:<[IF3END]><[IF2END]>
+		   target="<{linkTarget}>"
+		   <{titleLinkDataAttributes}>
+			   ><{title}></a>\
+		<[IF [ abstract | fileIncludes ] & !authorDateAux & ! [ annotationClassSuffix "-partial" ] ]>:<[IFEND]>\
+		<[IF authorDateAux]><[IF2 author]>,\ <[IF2END]><{authorDateAux}><[IF2 [ abstract | fileIncludes ] & ! [ annotationClassSuffix "-partial" ] ]>:<[IF2END]><[IFEND]>
 	</p>
-	<[IFEND]>
 	<[IF abstract]>
 	<blockquote class="data-field annotation-abstract">
+		<[IF2 thumbnailFigure]>
+		<{thumbnailFigure}>
+		<[IF2END]>
 		<{abstract}>
 		<[IF2 fileIncludes]>
 		<div class="data-field file-includes"><{fileIncludes}></div>
