--- a/template/include/annotation-blockquote-outside.tmpl
+++ b/template/include/annotation-blockquote-outside.tmpl
@@ -1,17 +1,16 @@
-<blockquote class="annotation<{annotationClassSuffix}> <{dataSourceClass}>">
-	<[IF fullTitleHTML]>
+<blockquote class="annotation<{annotationClassSuffix}>">
+	<[IF thumbnailFigure]>
+	<{thumbnailFigure}>
+	<[IFEND]>
 	<p class="data-field title">
 		<a 
 		   class="<{titleLinkClass}>"
 		   title="Open <{titleLinkHref}> in <{whichTab}> <{tabOrWindow}>"
 		   href="<{titleLinkHref}>"
-		   <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
-		   <[IF2 titleLinkDataAttributes]><{titleLinkDataAttributes}><[IF2END]>
-		   <{titleLinkIconMetadata}>
-			   ><{fullTitleHTML}></a>\
-		<[IF2 secondaryTitleLinksHTML]><span class="secondary-title-links"><{secondaryTitleLinksHTML}></span><[IF2END]>
+		   target="<{linkTarget}>"
+		   <{titleLinkDataAttributes}>
+			   ><{title}></a>
 	</p>
-	<[IFEND]>
 	<[IF authorDateAux]>
 	<p class="data-field author-date-aux"><{authorDateAux}></p>
 	<[IFEND]>
