Add support for .abstract-collapse-only

--- a/css/default.css
+++ b/css/default.css
@@ -550,6 +550,14 @@ section.collapse > .heading {
     transition: none;
 }
 
+/*****************************/
+/*	Shown only when collapsed.
+ */
+
+.collapse.expanded > .abstract-collapse-only {
+	display: none;
+}
+
 /********************/
 /*  Collapse summary.
  */
