--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -1707,6 +1707,14 @@ section.collapse > .heading {
     transition: none;
 }
 
+/*****************************/
+/*	Shown only when collapsed.
+ */
+
+.collapse.expanded > .abstract-collapse-only {
+	display: none;
+}
+
 /********************/
 /*  Collapse summary.
  */
