--- a/template/default.html
+++ b/template/default.html
@@ -102,9 +102,9 @@
           <svg class="logo-image" viewBox="0 0 64 75"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
         </a>
         <div class="sidebar-links">
-        <a class="icon-not site  link-page link-annotated" href="/about"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
-        <a class="icon-not me    link-page link-annotated" href="/me"                    title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
-        <a class="icon-not new   link-page link-annotated" href="/changelog"             title="Changelog of what's new or updated">Changes</a>
+        <a class="icon-not site  link-page link-annotated" href="/about"                title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
+        <a class="icon-not me    link-page link-annotated" href="/me"                   title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
+        <a class="icon-not new   link-page link-annotated" href="/changelog"            title="Changelog of what's new or updated">Changes</a>
         <a class="icon-not mail  link-page"                href="/doc/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
         <a class="icon-not annotations-newest link-page"   href="/doc/newest/index"     title="Most recent link annotations">Links</a>
         <a class="icon-not patreon" href="https://www.patreon.com/gwern" title="Link to Patreon donation profile to support my writing" rel="me">Patreon</a>
@@ -165,14 +165,14 @@
           </p>
 
           <div id="x-of-the-day">
-            <p><a id="qotd" class="include-replace-container include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a></p>
+            <p><a id="qotd" class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a></p>
 
-            <p><a id="sotd" class="include-replace-container include-spinner-not icon-not" href="/metadata/today-site.html">[Site Of The Day]</a></p>
+            <p><a id="sotd" class="include include-spinner-not icon-not" href="/metadata/today-site.html">[Site Of The Day]</a></p>
 
-            <p><a id="atod" class="include-replace-container include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a></p>
+            <p><a id="atod" class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a></p>
           </div>
 
-          <p><a id="psa-adblock" class="include-replace-container adsense include-spinner-not icon-not" href="/metadata/psa-adblock.html">[adblock public service announcement]</a></p>
+          <p><a id="psa-adblock" class="include adsense include-spinner-not icon-not" href="/metadata/psa-adblock.html">[adblock public service announcement]</a></p>
         </div>
 
       </article>
