Add .smallcaps-not class

--- a/css/default.css
+++ b/css/default.css
@@ -1156,6 +1156,7 @@ ul.interview .speaker {
     margin-right: var(--speaker-spacing);
 }
 
+
 /*************/
 /* ABSTRACTS */
 /*************/
@@ -1171,6 +1172,10 @@ ul.interview .speaker {
  */
 p.intro-graf::first-line {
     font-variant-caps: small-caps;
+}
+
+.smallcaps-not > p.intro-graf::first-line {
+	font-variant-caps: normal;
 }
 
 
