--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -2313,6 +2313,7 @@ ul.interview .speaker {
     margin-right: var(--speaker-spacing);
 }
 
+
 /*************/
 /* ABSTRACTS */
 /*************/
@@ -2328,6 +2329,10 @@ ul.interview .speaker {
  */
 p.intro-graf::first-line {
     font-variant-caps: small-caps;
+}
+
+.smallcaps-not > p.intro-graf::first-line {
+	font-variant-caps: normal;
 }
 
 
