--- a/css/initial.css
+++ b/css/initial.css
@@ -684,10 +684,12 @@ body[class*='-index'] #TOC.TOC-links-only li {
     font-size: inherit;
     z-index: 1;
     cursor: pointer;
+    opacity: 0;
 }
 #TOC.collapsed .toc-collapse-toggle-button {
     width: 100%;
     height: 100%;
+	opacity: 1;
 }
 
 #TOC .toc-collapse-toggle-button span {
@@ -714,6 +716,7 @@ body[class*='-index'] #TOC.TOC-links-only li {
         color: var(--GW-TOC-collapse-button-text-hover-color);
         background-color: var(--GW-TOC-collapse-button-hover-color);
         outline: 1px dotted var(--GW-TOC-collapse-button-border-hover-color);
+        opacity: 1;
     }
 }
 
