--- a/css/head-GENERATED.css
+++ b/css/head-GENERATED.css
@@ -684,12 +684,12 @@ body[class*='-index'] #TOC.TOC-links-only li {
     font-size: inherit;
     z-index: 1;
     cursor: pointer;
-    opacity: 0;
+	visibility: hidden;
 }
 #TOC.collapsed .toc-collapse-toggle-button {
     width: 100%;
     height: 100%;
-	opacity: 1;
+	visibility: visible;
 }
 
 #TOC .toc-collapse-toggle-button span {
@@ -716,7 +716,9 @@ body[class*='-index'] #TOC.TOC-links-only li {
         color: var(--GW-TOC-collapse-button-text-hover-color);
         background-color: var(--GW-TOC-collapse-button-hover-color);
         outline: 1px dotted var(--GW-TOC-collapse-button-border-hover-color);
-        opacity: 1;
+    }
+    #TOC:hover .toc-collapse-toggle-button {
+        visibility: visible;
     }
 }
 
