--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2480,18 +2480,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1716886367#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1720175510#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1716886367#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1720175510#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1716886367#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1720175510#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1716886367#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1720175510#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5520,7 +5520,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1716886367#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1720175510#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5701,7 +5701,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1716886367#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1720175510#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6149,7 +6149,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1716886367#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1720175510#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7102,7 +7102,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1716886367#question');
+    background-image: url('/static/img/icon/icons.svg?v=1720175510#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7312,7 +7312,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
 	content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-	background-image: url('/static/img/icon/icons.svg?v=1716886367#magnifying-glass-plus-light');
+	background-image: url('/static/img/icon/icons.svg?v=1720175510#magnifying-glass-plus-light');
 	background-size: 56px 56px;
 	background-origin: content-box;
 	background-repeat: no-repeat;
@@ -7694,7 +7694,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1716886367#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1720175510#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7770,19 +7770,20 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
     box-shadow: 0 0 0 0.1em var(--background-color);
 }
 
+.markdownBody div.block-context-highlighted > :first-child::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1716886367#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1720175510#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
     display: inline-block;
-    width: 1em;
-    height: 1em;
+    width: 1.75em;
+    height: 1.125em;
     position: relative;
-    top: 0.1em;
+    top: 0.2em;
     margin-right: 0.5em;
-    opacity: 0.75;
+    opacity: 0.9;
 }
 
 
