--- a/css/head-VERSIONED.css
+++ b/css/head-VERSIONED.css
@@ -1662,17 +1662,38 @@ figure.width-full {
 #markdownBody .marginnote.sidenote:hover {
     box-shadow: none;
 }
-/* make links in margin notes (somewhat unusual but should be supported simply because that's what one would expect) clickable/hover-able */
+/*	Make links in margin notes (somewhat unusual but should be supported simply 
+	because that’s what one would expect) clickable/hover-able.
+ */
 #markdownBody .marginnote.sidenote::after {
     z-index: -1;
 }
 
 /*  Margin notes within admonitions need special layout.
     This is based on the width of the admonition icon area.
-    */
+ */
 #markdownBody .admonition .marginnote.sidenote {
     width: calc(50vw - ((var(--GW-body-max-width) + (2.875em / (0.85/0.875)))/2 + 96px));
     right: calc(var(--GW-body-max-width) + (2.875em / (0.85/0.875)) + 64px);
+}
+
+/*	Special “manicule” margin notes.
+ */
+.marginnote.manicule svg {
+	display: inline-block;
+	width: 1.75em;
+	top: 0.2em;
+	position: relative;
+	opacity: 0.9;
+}
+#markdownBody .marginnote.manicule.sidenote {
+	font-size: inherit;
+	padding-top: 0.2em;
+	opacity: 1;
+	pointer-events: none;
+}
+#markdownBody .marginnote.manicule.sidenote::after {
+	display: none;
 }
 
 /*******************************************/
