--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -945,18 +945,18 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 
 /*	Math in Wikipedia pop-frames.
  */
-.annotation.wikipedia-entry .wikipedia-math-block-wrapper img,
-.annotation.wikipedia-entry .wikipedia-math-inline-wrapper img {
+.wikipedia-entry .wikipedia-math-block-wrapper img,
+.wikipedia-entry .wikipedia-math-inline-wrapper img {
 	filter: invert(1);
 	background-color: var(--GW-wikipedia-math-image-background-color);
 }
 
 /*	Images in figures in Wikipedia pop-frames.
  */
-.annotation.wikipedia-entry figure img {
+.wikipedia-entry figure img {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1720175517">
-<script src="/static/js/head.js?v=1720175515"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1720213570">
+<script src="/static/js/head.js?v=1720213568"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1720175510" as="image">
