default.html: footer: anonymous feedback: rm never-used class

--- a/template/default.html
+++ b/template/default.html
@@ -161,7 +161,7 @@
 
         <div class="markdownBody" id="footer">
           <p id="footer-anonymous-feedback">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not anonymous-feedback-link">[&hairsp;Send Anonymous Feedback&hairsp;]</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not">[&hairsp;Send Anonymous Feedback&hairsp;]</a>
           </p>
 
           <div id="x-of-the-day">
