--- a/template/default.html
+++ b/template/default.html
@@ -103,7 +103,7 @@
         </a>
         <div class="sidebar-links">
         <a class="icon-not       link-page link-annotated" href="/about"                title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
-        <a class="icon-not me    link-page link-annotated" href="/me"                   title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
+        <a class="icon-not       link-page link-annotated" href="/me"                   title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
         <a class="icon-not new   link-page link-annotated" href="/changelog"            title="Changelog of what's new or updated">Changes</a>
         <a class="icon-not       link-page"                href="/doc/newsletter/index" title="Monthly mailing list archives" rel="me">News</a>
         <a class="icon-not                    link-page"   href="/doc/newest/index"     title="Most recent link annotations">Links</a>
